@@ -6,6 +6,7 @@ dillo-3.0.1 [not released yet]
 
 +- Add preference for UI theme.
  - Allow key bindings for paging left/right.
+ - Privacy -- never send cookies when making third-party requests.
    Patches: corvid
 
 -----------------------------------------------------------------------------
